# optoforce

./: CMakeLists.txt  README.md  package.xml
omd/: CMakeLists.txt  CMakeLists.txt.backup  package.xml
omd/cmake/: Findomd.cmake
omd/lib/linux/: OMD.lib  libOMD.so.1.5  libOMD.so.1.5.0
omd/lib/windows/: OMD.lib
optoforce/: CMakeLists.txt  CMakeLists.txt.backup  package.xml  readme.md
optoforce/cfg/: config.yaml
optoforce/cmake/: my-extras.cmake.in
optoforce/examples/: example_acquisition.cpp  example_config_acquisition.cpp  test_opto_device_array.cpp
optoforce/include/optoforce/: optoforce_acquisition.hpp  optoforce_array_driver.hpp  optoforce_driver.hpp
optoforce/src/: optoforce_acquisition.cpp  optoforce_array_driver.cpp  optoforce_driver.cpp
